--- a/05_JavaScript_Advanced/.vscode/launch.json
+++ b/05_JavaScript_Advanced/.vscode/launch.json
@@ -29,7 +29,8 @@
             "skipFiles": [
                 "<node_internals>/**"
             ],
-            "program": "${workspaceFolder}\\index.test.js"
+            "program": "${file}"
+            //"${workspaceFolder}\\index.test.js"
         }
     ]
 }
