--- a/08_JavaScrtip_BackEnd/04_Workshops/package.json
+++ b/08_JavaScrtip_BackEnd/04_Workshops/package.json
@@ -1,7 +1,6 @@
 {
   "name": "04_workshops",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "nodemon index.js"
@@ -11,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "express-handlebars": "^6.0.6"
-  }
+    "express-handlebars": "^6.0.6",
+    "mongoose": "^6.7.0"
+  },
+  "description": ""
 }
