--- a/08_JavaScrtip_BackEnd/04_Workshops/package.json
+++ b/08_JavaScrtip_BackEnd/04_Workshops/package.json
@@ -9,8 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "express-handlebars": "^6.0.6",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.0"
   },
   "description": ""
